--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -5,6 +5,7 @@ body {
 }
 
 h1 {
+    color: rgb(255, 255, 255);
     display: flex;
     text-align: center;
     justify-content: center;
@@ -17,6 +18,7 @@ nav {
     margin-top: 40px;
     display: flex;
     justify-content: center;
+    
 }
 
 nav ul {
@@ -35,10 +37,11 @@ nav li {
 nav a {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display:block;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 150%;
     text-decoration: none;
-    border: solid 3px rgb(59, 54, 54);
+    border: solid 3px rgb(0, 0, 0);
+    border-radius: 7px;
 }
 
 
