--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -13,10 +13,11 @@ h1 {
     font-size: 410%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-shadow: 3px 3px 3px black;
+    margin-top: 20px;
 }
 
 nav {
-    margin-top: 40px;
+    margin-top: 45px;
     display: flex;
     justify-content: center;
     
@@ -47,6 +48,8 @@ nav a {
     border-radius: 7px;
     padding: 5px 0;
     text-shadow: 2px 3px 3px black;
+    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
+    background-repeat: no-repeat;
 }
 
 nav a:hover {
