--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,97 +1,87 @@
 
-
-
 body {
-    padding-bottom: 50px; /* Ensure there's padding at the bottom of the page */
-    background-color: azure;
-    
+min-height: 100vh;
+background-image: linear-gradient(to bottom, rgb(43, 39, 39), rgb(126, 122, 122), gray);
+background-repeat: no-repeat;
 }
 
 
 
 
 h1 {
-font-size: 90px;
+color: rgb(255, 255, 255);
 display: flex;
+text-align: center;
 justify-content: center;
-
-
-
+font-size: 410%;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 .navs {
+margin-top: 40px;
 display: flex;
-flex-direction: row;
-justify-content: space-evenly;
-
-
+justify-content: center;
 }
+
+
 .box1 {
-position: relative;
-width: 300px;
-height: 100px;
-top: 20px;
-background-color: rgb(32, 97, 201);
-border-radius: 20px;
-
-
-
+list-style: none;
+float: left;
+margin: 0 20px;
+width: 200px;
+text-align: center;
 }
 
 
 .box2 {
-position: relative;
-width: 300px;
-height: 100px;
-top: 20px;
-background-color: rgb(32, 97, 201);
-border-radius: 20px;
-
-
-
+list-style: none;
+float: left;
+margin: 0 20px;
+width: 200px;
+text-align: center;
 }
 
 .box3{
-position: relative;
-width: 300px;
-height: 100px;
-top: 20px;
-background-color: rgb(32, 97, 201);
-border-radius: 20px;
-
-
-
+list-style: none;
+float: left;
+margin: 0 20px;
+width: 200px;
+text-align: center;
 }
 
 .box1 a {
-font-size: 50px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+display:block;
 color: rgb(255, 255, 255);
+font-size: 150%;
 text-decoration: none;
-display: flex;
-justify-content: center;
-position: relative;
-right: 5px;
+border: solid 3px rgb(0, 0, 0);
+border-radius: 7px;
 
 
 
 }
 
 .box2 a {
-font-size: 50px;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+display:block;
 color: rgb(255, 255, 255);
+font-size: 150%;
 text-decoration: none;
-display: flex;
-justify-content: center;
+border: solid 3px rgb(0, 0, 0);
+border-radius: 7px;
 }
 
-.box3 a {
-font-size: 50px;
-color: rgb(255, 255, 255);
-text-decoration: none;
-display: flex;
-justify-content: center;
 
+.box3 a {
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+display:block;
+color: rgb(255, 255, 255);
+font-size: 150%;
+text-decoration: none;
+border: solid 3px rgb(0, 0, 0);
+border-radius: 7px;
 }
 
 h2 {
@@ -107,7 +97,7 @@ top: 200px;
 
 .card {
 position: relative;
-left: 339px;
+left: 330px;
 background-color: rgb(217, 217, 217);
 border-radius: 30px;
 top: 30px;
