--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,23 +38,59 @@ nav li {
 }
 
 nav a {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display:block;
-    color: rgb(255, 255, 255);
-    font-size: 150%;
-    text-decoration: none;
-    border: solid 3px rgb(11, 211, 44);
-    box-shadow: 2px 0 4px rgb(11, 211, 44);
-    border-radius: 7px;
-    padding: 5px 0;
-    text-shadow: 2px 3px 3px black;
-    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
-    background-repeat: no-repeat;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+display:block;
+color: rgb(255, 255, 255);
+font-size: 150%;
+text-decoration: none;
+border: solid 3px rgb(11, 211, 44);
+box-shadow: 2px 0 4px rgb(11, 211, 44);
+border-radius: 7px;
+padding: 5px 0;
+text-shadow: 2px 3px 3px black;
+background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
+background-repeat: no-repeat;
 }
 
 nav a:hover {
-    color: yellow;
-    text-shadow: 2px 2px 2px rgb(97, 13, 207);
+color: yellow;
+text-shadow: 2px 2px 2px rgb(97, 13, 207);
+transform: scale(1.1);
+transition: transform 0.2s ease-in-out;
+}
+
+
+.hours {
+width: 600px;
+height: 350px;
+border: solid 3px rgb(11, 211, 44);
+box-shadow: 2px 0 4px rgb(11, 211, 44);
+background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
+border-radius: 4px;
+position: relative;
+left: 460px;
+top: 100px;
+}
+
+
+.clockInOut {
+width: 120px;
+height: 50px;
+border: solid 1px rgb(255, 255, 255);
+background-color: grey;
+
+border-radius: 7px;
+position: relative;
+left: 680px;
+top: 20px;
+}
+
+
+
+
+.clockInOut:hover {
+   transform: scale(1.1);
+   transition: transform 0.2s ease-in-out;
 }
 
 
