--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -52,7 +52,42 @@ nav a {
     background-repeat: no-repeat;
 }
 
+
+.payrollContainer {
+    width: 670px;
+    height: 415px;
+    border: solid 3px rgb(11, 211, 44);
+    box-shadow: 2px 0 4px rgb(11, 211, 44);
+    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
+    border-radius: 12px;
+    position: relative;
+    left: 430px;
+    top: 100px;
+}
+
+
+.companyInfo {
+    position: relative;
+    width: 100px;
+    height: 35px;
+    top: 340px;
+    left: 250px;
+    border-radius: 7px;
+    background-color: grey;
+    border: solid 2px rgb(255, 255, 255);
+}
+
+
+label {
+    position: relative;
+    left: 240px;
+    top:  335px;
+    color: white;
+    }
+
 nav a:hover {
     color: yellow;
     text-shadow: 2px 2px 2px rgb(97, 13, 207);
+    transform: scale(1.1);
+    transition: transform 0.2s ease-in-out;
 }
