--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,37 +60,64 @@ transition: transform 0.2s ease-in-out;
 }
 
 
+
+
 .hours {
-width: 600px;
-height: 350px;
+width: 670px;
+height: 415px;
 border: solid 3px rgb(11, 211, 44);
 box-shadow: 2px 0 4px rgb(11, 211, 44);
 background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
-border-radius: 4px;
+border-radius: 12px;
 position: relative;
-left: 460px;
+left: 430px;
 top: 100px;
 }
 
 
 .clockInOut {
-width: 120px;
+width: 130px;
 height: 50px;
-border: solid 1px rgb(255, 255, 255);
+border: solid 2px rgb(255, 255, 255);
 background-color: grey;
-
+color: white;
 border-radius: 7px;
 position: relative;
-left: 680px;
-top: 20px;
+left: 405px;
+top: 18px;
 }
 
+
+.company {
+position: relative;
+width: 100px;
+height: 35px;
+top: 20px;
+left: 770px;
+border-radius: 7px;
+background-color: grey;
+border: solid 2px rgb(255, 255, 255);
+
+
+}
+
+label {
+position: relative;
+left: 760px;
+top:  16px;
+color: white;
+}
 
 
 
 .clockInOut:hover {
    transform: scale(1.1);
    transition: transform 0.2s ease-in-out;
+}
+
+
+.clockInOut:active {
+    transform: none;
 }
 
 
