--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -20,7 +20,7 @@ nav {
     margin-top: 45px;
     display: flex;
     justify-content: center;
-    
+
 }
 
 nav ul {
@@ -39,7 +39,7 @@ nav li {
 
 nav a {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display:block;
+    display: block;
     color: rgb(255, 255, 255);
     font-size: 150%;
     text-decoration: none;
@@ -66,36 +66,35 @@ nav a {
 
 
 form {
-   position: relative;
-   color: white;
-   left: 150px;
-   top: 90px;
-   
+    position: relative;
+    color: white;
+    left: 150px;
+    top: 90px;
 }
 
 
 #companyName {
-border-radius: 7px;
-width: 300px;
-height: 50px;
+    border-radius: 7px;
+    width: 300px;
+    height: 50px;
 }
 
 #payRate {
-border-radius: 7px;
-width: 300px;
-height: 50px;
+    border-radius: 7px;
+    width: 300px;
+    height: 50px;
 }
 
 #submit {
-   position: relative;
-   left: 99px;
-   top: 30px;
-   background-color: grey;
-   border: solid 2px rgb(255, 255, 255);
-   color: white;
-   width: 100px;
-   height: 50px;
-   border-radius: 7px;
+    position: relative;
+    left: 99px;
+    top: 30px;
+    background-color: grey;
+    border: solid 2px rgb(255, 255, 255);
+    color: white;
+    width: 100px;
+    height: 50px;
+    border-radius: 7px;
 }
 
 #submit:hover {
@@ -104,16 +103,29 @@ height: 50px;
 }
 
 #submit:active {
-transform: none;
-
-
+    transform: none;
 }
-
-
 
 nav a:hover {
     color: yellow;
     text-shadow: 2px 2px 2px rgb(97, 13, 207);
     transform: scale(1.1);
     transition: transform 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        flex-flow: column wrap;
+        justify-content: center;
+    }
+    nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    nav ul {
+        display: flex;
+        justify-content: center;
+        flex-flow: column wrap;
+    }
 }
