--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -52,26 +52,19 @@ nav a {
     background-repeat: no-repeat;
 }
 
-.container {
-display: flex;
-justify-content: center;
-position: relative;
-top: 100px;
-
-
-}
-
-
 .payrollContainer {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 100px;
     width: 670px;
     height: 415px;
     border: solid 3px rgb(11, 211, 44);
     box-shadow: 2px 0 4px rgb(11, 211, 44);
     background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
     border-radius: 12px;
-   
-}
 
+}
 
 .companyInfo {
     position: relative;
@@ -83,7 +76,6 @@ top: 100px;
     background-color: grey;
     border: solid 2px rgb(255, 255, 255);
 }
-
 
 label {
     position: relative;
@@ -104,16 +96,27 @@ nav a:hover {
         flex-flow: column wrap;
         justify-content: center;
     }
+
     nav {
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     nav ul {
         display: flex;
         justify-content: center;
         flex-flow: column wrap;
     }
+
+    nav a {
+        margin: 5px;
+    }
+    .payrollContainer {
+        text-align: center;
+        max-width: 85%;
+        margin: 20px auto 20px auto;
+    } 
 }
 
 @media screen and (max-width: 768px) {
@@ -121,14 +124,22 @@ nav a:hover {
         flex-flow: column wrap;
         justify-content: center;
     }
+
     nav {
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     nav ul {
         display: flex;
         justify-content: center;
         flex-flow: column wrap;
+    }
+
+    .payrollContainer {
+        text-align: center;
+        max-width: 85%;
+        margin: 20px auto 20px auto;
     }
 }
