--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ nav a:hover {
 }
 
 
-.bigBox {
+main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,6 +167,9 @@ label {
         justify-content: center;
         flex-flow: column wrap;
     }
+    nav a {
+        margin: 5px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -183,5 +186,10 @@ label {
         display: flex;
         justify-content: center;
         flex-flow: column wrap;
+    }
+    .card {
+        text-align: center;
+        max-width: 85%;
+        margin: 20px auto 20px auto;
     }
 }
