--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -52,18 +52,28 @@ nav a {
     background-repeat: no-repeat;
 }
 
-.formBox {
+main {
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
     top: 100px;
-    width: 590px;
+    height: 100%;
+    width: 100%;
+}
+
+.formBox {
+    width: 670px;
     height: 415px;
     border: solid 3px rgb(11, 211, 44);
     box-shadow: 2px 0 4px rgb(11, 211, 44);
     background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
     border-radius: 12px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 
