--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -52,18 +52,28 @@ nav a {
     background-repeat: no-repeat;
 }
 
-.payrollContainer {
+main {
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
     top: 100px;
+    height: 100%;
+    width: 100%;
+}
+
+.payrollContainer {
     width: 670px;
     height: 415px;
     border: solid 3px rgb(11, 211, 44);
     box-shadow: 2px 0 4px rgb(11, 211, 44);
     background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
     border-radius: 12px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .companyInfo {
@@ -116,7 +126,7 @@ nav a:hover {
         text-align: center;
         max-width: 85%;
         margin: 20px auto 20px auto;
-    } 
+    }
 }
 
 @media screen and (max-width: 768px) {
