--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -62,43 +62,57 @@ main {
     width: 100%;
 }
 
-.payrollContainer {
-    width: 670px;
-    height: 415px;
-    border: solid 3px rgb(11, 211, 44);
-    box-shadow: 2px 0 4px rgb(11, 211, 44);
-    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
-    border-radius: 12px;
+#listContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
 }
 
 .companyInfo {
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     height: 35px;
-    top: 340px;
-    left: 250px;
     border-radius: 7px;
     background-color: grey;
     border: solid 2px rgb(255, 255, 255);
 }
 
-label {
-    position: relative;
-    left: 240px;
-    top: 335px;
+#companyList {
+    display: flex;
+    margin-left: 10px;
+    width: 130px;
+    margin-bottom: 15px;
+}
+
+.payrollContainer {
+    width: 670px;
+    height: 430px;
+    border: solid 3px rgb(11, 211, 44);
+    box-shadow: 2px 0 4px rgb(11, 211, 44);
+    background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
+    border-radius: 12px;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.payrollContainer p {
+    display: flex;
+    justify-content: center;
     color: white;
 }
 
-nav a:hover {
-    color: yellow;
-    text-shadow: 2px 2px 2px rgb(97, 13, 207);
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
+.payrollInfo {
+    width: 464px;
+    height: 333px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: larger;
 }
 
 @media screen and (max-width: 920px) {
@@ -122,6 +136,7 @@ nav a:hover {
     nav a {
         margin: 5px;
     }
+
     .payrollContainer {
         text-align: center;
         max-width: 85%;
