--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ main {
 
 .card {
     width: 670px;
-    height: 415px;
+    height: 430px;
     border: solid 3px rgb(11, 211, 44);
     box-shadow: 2px 0 4px rgb(11, 211, 44);
     background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
@@ -86,16 +86,16 @@ main {
 
 .timerContainer {
     display: flex;
-    justify-content: center;
-    position: relative;
-    right: 180px;
-    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    height: 50%;
+    color: white;
+    font-size: 30px;
+    flex-direction: column;
+    margin: 55px auto;
 }
 
-#timer {
-    font-size: 2em;
-    color: white;
-}
 
 .bottomContainer {
     display: flex;
@@ -104,35 +104,38 @@ main {
     width: 100%;
 }
 
-label {
+.bottomContainer p {
     color: white;
-    margin-right: 10px;
+    margin-right: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 6px;
 }
 
 .company {
-    width: 100px;
+    display: flex;
+    justify-content: center;
+    width: 122px;
     height: 35px;
     border-radius: 7px;
-    background-color: grey;
+    background-image: linear-gradient(to bottom, rgb(43, 39, 39), rgb(126, 122, 122), gray);
     border: solid 2px rgb(255, 255, 255);
     margin-right: 10px;
+    color: white;
 }
 
 .clockInOut {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 130px;
     height: 50px;
     border: solid 2px rgb(255, 255, 255);
-    background-color: grey;
+    background-image: linear-gradient(to bottom, rgb(43, 39, 39), rgb(126, 122, 122), gray);
     color: white;
     border-radius: 7px;
-}
-
-#timer {
-    color: white;
-    position: relative;
-    left: 180px;
-    top: 150px;
-    font-size: 50px;
 }
 
 .clockInOut:hover {
@@ -188,5 +191,8 @@ label {
         text-align: center;
         max-width: 85%;
         margin: 20px auto 20px auto;
+        height: 30%;
     }
+
+
 }
