--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -122,6 +122,19 @@ main {
     font-size: larger;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: relative;
+    top:180px;
+}
+
+footer p {
+    font-size: large;
+}
+
 @media screen and (max-width: 920px) {
     header {
         flex-flow: column wrap;
