--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,6 +148,19 @@ main {
     transform: none;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: relative;
+    top:180px;
+}
+
+footer p {
+    font-size: large;
+}
+
 @media screen and (max-width: 920px) {
     header {
         flex-flow: column wrap;
