bootstrap for replacing windows.alert is finished

--- a/assets/css/payroll.css
+++ b/assets/css/payroll.css
@@ -62,6 +62,13 @@ main {
     width: 100%;
 }
 
+.modal-body {
+    position: relative;
+    top: 0px;
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
 #listContainer {
     display: flex;
     justify-content: center;
