--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -20,7 +20,6 @@ nav {
     margin-top: 45px;
     display: flex;
     justify-content: center;
-
 }
 
 nav ul {
@@ -81,6 +80,13 @@ form {
     justify-content: center;
     flex-direction: column;
     color: white;
+}
+
+.modal-body {
+    position: relative;
+    top: 0px;
+    flex: 1 1 auto;
+    padding: 1rem;
 }
 
 #companyName {
