--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -64,7 +64,6 @@ main {
     align-items: center;
     position: relative;
     top: 100px;
-    height: 100%;
     width: 100%;
 }
 
@@ -154,6 +153,7 @@ footer p {
     }
 
     nav {
+        margin-top: 15px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -169,9 +169,26 @@ footer p {
         margin: 5px;
     }
 
+    main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 10px;
+        width: 100%;
+    }
+
+    footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        position: relative;
+        top: 30px;
+    }
+
     .formBox {
         text-align: center;
-        max-width: 85%;
         margin: 20px auto 20px auto;
     }
 }
